[gd_scene load_steps=6 format=3 uid="uid://k7wyt0bajfdp"]

[ext_resource type="Script" uid="uid://b0ej1twjg8yg3" path="res://source/menus/popups/load_game_dialog.gd" id="1_oe3p2"]
[ext_resource type="Texture2D" uid="uid://lh3dna1fipe" path="res://assets/sprites/ui/icons/close.png" id="1_w63ud"]
[ext_resource type="PackedScene" uid="uid://bfxek44m8du8k" path="res://source/menus/menu_widgets/save_slot.tscn" id="2_vvvv0"]
[ext_resource type="PackedScene" uid="uid://vaqsswsqvw3l" path="res://source/menus/popups/delete_confirmation.tscn" id="4_8ge3d"]
[ext_resource type="PackedScene" uid="uid://8pneimcmdb2c" path="res://source/menus/popups/load_confirmation.tscn" id="5_1k0tt"]

[node name="LoadGameDialog" type="PanelContainer"]
custom_minimum_size = Vector2(650, 0)
offset_right = 48.0
offset_bottom = 48.0
script = ExtResource("1_oe3p2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Load a Save"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="SaveSlot" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_vvvv0")]
unique_name_in_owner = true
layout_mode = 2

[node name="SaveSlot2" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_vvvv0")]
unique_name_in_owner = true
layout_mode = 2

[node name="SaveSlot3" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_vvvv0")]
unique_name_in_owner = true
layout_mode = 2

[node name="Close" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("1_w63ud")

[node name="DeleteConfirmation" parent="." instance=ExtResource("4_8ge3d")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="LoadConfirmation" parent="." instance=ExtResource("5_1k0tt")]
unique_name_in_owner = true
visible = false
layout_mode = 2
